03.rolling.probe/00.initial/00.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: rolling-probe-demo
  labels:
    app: myapp
    app.openshift.io/runtime: spring-boot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: quay.io/naveenkendyala/sboot-hello:v1
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP          
        securityContext:
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL      
  strategy:
    # Default type is also RollingUpdate
    type: RollingUpdate
