03.rolling.probe/00.initial/01.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: rolling-probe-demo
  labels:
    app: sbomyappot

spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: myapp
  type: LoadBalancer
